# pb_paneboard02

./: .gitignore  CLAUDE.md  LICENSE  README.md  paneboard_rename_checklist.txt
.buk/: burc.env  burs.env  launcher.buut_tabtarget.sh  launcher.buw_workbench.sh  launcher.pbw_workbench.sh
.buk/logs/: hist-pbw-p-unknown-20260106-071653-4566-707.txt  hist-pbw-p-unknown-20260106-072300-5059-962.txt  same-pbw-p-unknown.txt
.claude/agents/: coda.md  haka.md  sema.md
.claude/commands/: prep-pr.md
.claude/jjm/: jjg_gallops.json  jjp_AA.md
.vvk/: vvbf_brand.json
Tools/jjk/: jja_arcanum.sh  jjw_workbench.sh
Tools/pbk/: pbw_workbench.sh
poc/: .gitignore  Cargo.toml  REFACTORING_ROADMAP.md  build.rs  form.default.xml  layouts.default.xml  layouts.multi-select.xml  paneboard-poc.md  vspba-all.vpj  vspbp_PaneBoardPOC.vpw
poc/src/: main.rs  pbgc_core.rs  pbgf_form.rs  pbgfc_config.rs  pbgfp_parse.rs  pbgfr_resolve.rs  pbgft_types.rs  pbgk_keylog.rs  pbgr_retry.rs  pbgx_layout.rs  pbmba_ax.rs  pbmbd_display.rs  pbmbe_eventtap.rs  pbmbk_keymap.rs  pbmbo_observer.h  pbmbo_observer.rs  pbmbo_observer.swift  pbmbo_overlay.rs  pbmbs_sandbox.rs  pbmcl_clipboard.rs  pbmp_pane.rs  pbmsa_alttab.rs  pbmsb_browser.rs  pbmsm_mru.rs  pbxs_schema.xsd
tt/: pbw-p.ProofOfConcept.mk  pbw-p.ProofOfConcept.sh  pbw-t.ProofOfConceptTimed.10.sh
